0.2.3
=====
- support "min_compress_len" and "memcached_expire_time"
  with python-memcached backend.  Tests courtesy
  Justin Azoff #3

- Add support for coercion of string config values
  to Python objects - ints, "false", "true", "None".
  #4

- Added support to DBM file lock to allow reentrant
  access per key within a single thread, so that 
  even though the DBM backend locks for the whole file,
  a creation function that calls upon a different
  key in the cache can still proceed.  #5

- Fixed DBM glitch where multiple readers 
  could be serialized.

0.2.2
=====
- add Redis backend, courtesy Ollie Rutherfurd

0.2.1
=====
- move tests into tests/cache namespace
- py3k compatibility is in-place now, no
  2to3 needed.

0.2.0
=====

- Based on dogpile.core now, to get the package
  namespace thing worked out.

0.1.1
=====
- Fixed the configure_from_config() method of region
  and backend which wasn't working.  Courtesy
  Christian Klinger.

0.1.0
=====
Initial release.

Includes a pylibmc backend and a plain dictionary backend.