@@ -17,6 +17,10 @@
 - Fixed DBM glitch where multiple readers 
   could be serialized.
 
+- Adjust bmemcached backend to work with newly-repaired
+  bmemcached calling API (see bmemcached 
+  ef206ed4473fec3b639e).
+
 0.2.2
 =====
 - add Redis backend, courtesy Ollie Rutherfurd
